--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,10 @@ colorama==0.4.6
 distro==1.9.0
 exceptiongroup==1.3.1
 fastapi==0.122.0
+feedparser==6.0.11
 filelock==3.20.0
 fsspec==2025.10.0
 h11==0.16.0
-hdbscan==0.8.40
 httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
